--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <div class="caixa-conteudo">
                             <ul id="lista-noticias">
                                 <li>
-                                    <a href="">
+                                    <a href="brasil.html">
                                         <img src="img/brasil.jpg" width="80">
                                         <h3>Brasil</h3>
                                         <p>Etiam lacinia, elit sed ultrices sollicitudin,
